# qwen2-mcp-test

./: .gitignore  README.md  main.py  pyproject.toml  server.py
